--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 				<li><a href="">home</a></li>
 				<li><a href="">about</a></li>
 				<li><a href="">portfolio</a></li>
-				<li><a href="">blog</a></li>
 				<li><a href="">contact</a></li>
 			</ul>
 		</nav>
@@ -158,20 +157,18 @@
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
-
 				</div>
 			</div>
-			<div class="grid-item grid4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
+			<!-- <div class="grid-item grid4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
 					<img src="img/5.jpg" alt="">
 					<div class="work-inner">
 						<a href="" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
-					</div>
-				
+					</div>				
 				</div>
-			</div>
+			</div> -->
 			<div class="grid-item grid5 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
 					<img src="snake/1.png" alt="">					
@@ -180,7 +177,6 @@
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
-
 				</div>
 			</div>
 			<div class="grid-item grid6 col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -191,87 +187,11 @@
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
-
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- 节点轮播begin -->
-<section class="testinonial-section">
-	<div class="container">
-		<div class="section-title">
-			<h2>CLINTS</h2>
-			<p>Out believe has request not how comfort evident. Up delight cousins we feeling <br>minutes. Genius has looked end piqued spring.</p>
-		</div>
-		<div class="row testinonial-imgbox">
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/1.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/2.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/3.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-xs">
-				<a href=""><img src="img/4.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-sm hidden-xs">
-				<a href=""><img src="img/5.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-md hidden-sm hidden-xs">
-				<a href=""><img src="img/6.svg" alt=""></a>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- 节点轮播over -->
-<!-- blog begin -->
-<section class="blog-section">
-	<div class="container">
-		<div class="section-title">
-			<h2>LATEST BLOGS</h2>
-			<p>Out believe has request not how comfort evident. Up delight cousins we feeling<br>minutes. Genius has looked end piqued spring.</p>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog1.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog2.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog3.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="text-center" style="margin-bottom:10px;">
-			<a href="" class="site-btn">LOAD MORE.</a>
-		</div>
-	</div>
-</section>
-<!-- blog over -->
 <!--  联系 begin  -->
 <section class="contact-section">
 	<div class="container">
@@ -285,17 +205,17 @@
 					<li>
 						<i class="iconfont social_icon_con icon-iconfontcolor39"></i>
 						<span>PHONE</span>
-						<p>+1 (123) 456-7890</p>
+						<p>+86 182-3407-3017</p>
 					</li>
 					<li>
 						<i class="iconfont social_icon_con icon-xinfeng"></i>
 						<span>EMAIL</span>
-						<p>domain@gmail.com</p>
+						<p>hehuan07@qq.com</p>
 					</li>
 					<li>
 						<i class="iconfont social_icon_con icon-dingwei"></i>
 						<span>ADDRESS</span>
-						<p>A902, Crosswinds Apt, Western Road,<br>Brighton, East Sussex, Bath</p>
+						<p>杭州西湖区保椒路255号</p>
 					</li>
 				</ul>
 			</div>
