--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>GURU</title>
+	<title>HH</title>
 	<link rel="stylesheet" href="css/response.css">
 	<link rel="stylesheet" href="iconfont/iconfont.css">
 	<link rel="stylesheet" href="css/index.css">
@@ -12,13 +12,12 @@
 <!-- 顶部header begin -->
 <header>
 	<div class="container">
-		<div class="logo col-lg-1 col-md-1 col-sm-1 col-xs-1">GURU</div>
+		<div class="logo col-lg-1 col-md-1 col-sm-1 col-xs-1">HEHUAN</div>
 		<nav class="header-nav col-lg-8 col-md-8 col-sm-8 hidden-xs">
 			<ul>
 				<li><a href="">home</a></li>
 				<li><a href="">about</a></li>
 				<li><a href="">portfolio</a></li>
-				<li><a href="">blog</a></li>
 				<li><a href="">contact</a></li>
 			</ul>
 		</nav>
@@ -31,13 +30,7 @@
 <!-- 首屏begin -->
 <section class="intro-section">
 	<div class="zhezhao">
-		<h1>MICHAEL GURU.</h1>
-		<div class="social">
-			<a href=""><i class="iconfont social_icon_con icon-facebookicon"></i></a>
-			<a href=""><i class="iconfont social_icon_con icon-tuite"></i></a>
-			<a href=""><i class="iconfont social_icon_con icon-be"></i></a>
-			<a href=""><i class="iconfont social_icon_con icon-06"></i></a>
-		</div>
+		<h1>HELLO AWESOME.</h1>
 		<div class="jiantou">
 			<span class="jiantou_span">
 				<i class="iconfont icon-jiantouxia"></i>
@@ -57,49 +50,9 @@
 			<!-- 右边文字 -->
 			<div class="about_text col-lg-6 col-md-6 col-sm-12 col-xs-12">
 				<h3>ABOUT ME.</h3>
-				<p>I'm a passionate designer, ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In 2015, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehe in voluptate velit esse cillum dolore eu.</p>
-				<div class="skills">
-					<div class="single-progress-item">
-						<h4>GRPHICE</h4>
-						<div class="progress-bar-style">
-							<div class="bar-inner" style="width:80%">
-								<span>80%</span>
-							</div>
-						</div>
-					</div>
-					<div class="single-progress-item">
-						<h4>UX/UI</h4>
-						<div class="progress-bar-style">
-							<div class="bar-inner" style="width:90%">
-								<span>90%</span>
-							</div>
-						</div>
-					</div>
-					<div class="single-progress-item">
-						<h4>WORDPRESS</h4>
-						<div class="progress-bar-style">
-							<div class="bar-inner" style="width:75%">
-								<span>75%</span>
-							</div>
-						</div>
-					</div>
-					<div class="single-progress-item">
-						<h4>FRONT-END</h4>
-						<div class="progress-bar-style">
-							<div class="bar-inner" style="width:93%">
-								<span>93%</span>
-							</div>
-						</div>
-					</div>
-					<div class="single-progress-item">
-						<h4>FRAMWORK</h4>
-						<div class="progress-bar-style">
-							<div class="bar-inner" style="width:85%">
-								<span>85%</span>
-							</div>
-						</div>
-					</div>
-				</div>
+				<p class="hh_skills">1.专业技能:了解React、Vue框架，能够快速开发手机应用，可以运用React Native开发原生app；了解nodejs，能够运用nodejs做前端自动化、脚本、服务器等；了解微信小程序的开发及流程；熟练掌握JavaScript语言，了解h5及css3，可以熟练地进行移动端布局、响应式布局等，除此之外，本人对后台语言php、java也有一定的了解，另外本人了解photoshop、AI等绘图工具，具有一定的设计能力。</p> 
+				<p>2.工作能力:具有良好的沟通能力和团队协作能力，能够独立并且高效完成每日工作任务，综合能力强，工作经验较为丰富。</p>
+				<p>3.性格方面:乐观开朗，喜欢交朋友，爱好各类体育运动及户外运动，比如:旅游、健身、游泳等。</p>
 			</div>
 		</div>
 	</div>
@@ -118,8 +71,8 @@
 						<li class="line_bottom"></li>	
 					</ul>	
 				</div>
-				<h4>GRPHICE</h4>
-				<p>We are gives you best graphic and website services.</p>
+				<h4>technophile</h4>
+				<p>Full of interest in New Technology.</p>
 			</div>
 			<div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<div class="icon"><i class="iconfont icon-yezi"></i>
@@ -130,9 +83,8 @@
 						<li class="line_bottom"></li>	
 					</ul>
 				</div>
-				<h4>BRANDING</h4>
-				<p>We are gives you best graphic and website services.</p>
-
+				<h4>Passion</h4>
+				<p>A passion for work and a love of life.</p>
 			</div>
 			<div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<div class="icon"><i class="iconfont icon-xiangji1"></i>
@@ -143,8 +95,8 @@
 						<li class="line_bottom"></li>	
 					</ul>
 				</div>
-				<h4>PHOTOGRAPHY</h4>
-				<p>We are gives you best graphic and website services.</p>
+				<h4>Photography</h4>
+				<p>Love all kinds of sports and Photography.</p>
 			</div>
 			<div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<div class="icon"><i class="iconfont icon-shezhi1"></i>
@@ -155,8 +107,8 @@
 						<li class="line_bottom"></li>	
 					</ul>
 				</div>
-				<h4>CUSTOMIZATION</h4>
-				<p>We are gives you best graphic and website services.</p>
+				<h4>risibility</h4>
+				<p>Optimistic and cheerful, positive.</p>
 			</div>
 		</div>
 	</div>
@@ -167,7 +119,7 @@
 	<div class="container">
 		<div class="section-title">
 			<h2>PORTFOLIO</h2>
-			<p>Out believe has request not how comfort evident. Up delight cousins we feeling <br>minutes. Genius has looked end piqued spring.</p>
+			<p>Every piece of work is a real project I've been involved in. <br>do it seriously and never be careless.</p>
 		</div>
 		<ul class="portfolios-filter">
 			<li>ALL</li>
@@ -178,9 +130,9 @@
 		<div class="row portfolio_container">
 			<div class="grid-item grid1 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
-					<img src="img/1.jpg" alt="">
+					<img src="img/1.png" alt="">
 					<div class="work-inner">
-						<a href="" class="work-zoom">
+						<a href="http://gdsktv.duapp.com" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
@@ -188,9 +140,9 @@
 			</div>
 			<div class="grid-item grid2 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
-					<img src="img/2.jpg" alt="">
+					<img src="img/2.png" alt="">
 					<div class="work-inner">
-						<a href="" class="work-zoom">
+						<a href="http://hehuanfj.duapp.com" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
@@ -199,31 +151,29 @@
 			</div>
 			<div class="grid-item grid3 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
-					<img src="img/3.jpg" alt="">
+					<img src="img/3.png" alt="">
 					<div class="work-inner">
-						<a href="" class="work-zoom">
+						<a href="http://hehuan.duapp.com" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
-
 				</div>
 			</div>
-			<div class="grid-item grid4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				<div class="work-item">
-					<img src="img/4.jpg" alt="">
-					<div class="work-inner">
-						<a href="" class="work-zoom">
-							<i class="iconfont icon-sousuo"></i>
-						</a>
-					</div>
-
-				</div>
-			</div>
-			<div class="grid-item grid5 col-lg-4 col-md-4 col-sm-4 col-xs-12">
+			<!-- <div class="grid-item grid4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
 					<img src="img/5.jpg" alt="">
 					<div class="work-inner">
 						<a href="" class="work-zoom">
+							<i class="iconfont icon-sousuo"></i>
+						</a>
+					</div>				
+				</div>
+			</div> -->
+			<div class="grid-item grid5 col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="work-item">
+					<img src="snake/1.png" alt="">					
+					<div class="work-inner">
+						<a href="snake/snake.html" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
@@ -231,93 +181,17 @@
 			</div>
 			<div class="grid-item grid6 col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="work-item">
-					<img src="img/6.jpg" alt="">
+					<img src="puke/1.png" alt="">
 					<div class="work-inner">
-						<a href="" class="work-zoom">
+						<a href="puke/puke.html" class="work-zoom">
 							<i class="iconfont icon-sousuo"></i>
 						</a>
 					</div>
-
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- 节点轮播begin -->
-<section class="testinonial-section">
-	<div class="container">
-		<div class="section-title">
-			<h2>CLINTS</h2>
-			<p>Out believe has request not how comfort evident. Up delight cousins we feeling <br>minutes. Genius has looked end piqued spring.</p>
-		</div>
-		<div class="row testinonial-imgbox">
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/1.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/2.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4">
-				<a href=""><img src="img/3.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-xs">
-				<a href=""><img src="img/4.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-sm hidden-xs">
-				<a href=""><img src="img/5.svg" alt=""></a>
-			</div>
-			<div class="svgimg col-lg-2 col-md-2 col-sm-3 col-xs-4 hidden-md hidden-sm hidden-xs">
-				<a href=""><img src="img/6.svg" alt=""></a>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- 节点轮播over -->
-<!-- blog begin -->
-<section class="blog-section">
-	<div class="container">
-		<div class="section-title">
-			<h2>LATEST BLOGS</h2>
-			<p>Out believe has request not how comfort evident. Up delight cousins we feeling<br>minutes. Genius has looked end piqued spring.</p>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog1.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog2.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href="" class="blog-item">
-					<img src="img/blog3.jpg" alt="">
-					<div class="blog-item-text">
-						<h3>Out believe has request not how</h3>
-						<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-						<h5>7 February 2017 / POSTED BY ADMIN</h5>
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="text-center" style="margin-bottom:10px;">
-			<a href="" class="site-btn">LOAD MORE.</a>
-		</div>
-	</div>
-</section>
-<!-- blog over -->
 <!--  联系 begin  -->
 <section class="contact-section">
 	<div class="container">
@@ -331,17 +205,17 @@
 					<li>
 						<i class="iconfont social_icon_con icon-iconfontcolor39"></i>
 						<span>PHONE</span>
-						<p>+1 (123) 456-7890</p>
+						<p>+86 182-3407-3017</p>
 					</li>
 					<li>
 						<i class="iconfont social_icon_con icon-xinfeng"></i>
 						<span>EMAIL</span>
-						<p>domain@gmail.com</p>
+						<p>hehuan07@qq.com</p>
 					</li>
 					<li>
 						<i class="iconfont social_icon_con icon-dingwei"></i>
 						<span>ADDRESS</span>
-						<p>A902, Crosswinds Apt, Western Road,<br>Brighton, East Sussex, Bath</p>
+						<p>杭州西湖区保椒路255号</p>
 					</li>
 				</ul>
 			</div>
